# python-game

./: .gitignore  main.py  ovni_game.py  pyproject.toml  sprites.py
docs/: T1 - Sprites.md
src/: __init__.py  game.py  prueba1.py  sprites.py
src/core/: __init__.py  game.py  settings.py  sprites.py  state.py
src/entities/: __init__.py  entity.py  player.py
